Closed Bug 154460 Opened 23 years ago Closed 23 years ago

Attempting to drag a url string from URL field to bookmark toolbar isn't working

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED
Chimera0.3

People

(Reporter: chrispetersen, Assigned: mikepinkerton)

Details

(Keywords: regression)

Attachments

(1 file)

Build: 2002-06-26-05 Platform: OS X 10.1.5 Expected Results: Dragging a url string from URL field to bookmark toolbar should create a bookmark What I got: Carat appears when hovering over toolbar but after mousing up no bookmark is created Steps to reproduce: 1) Go to any url 2) Click and drag globe url icon from url field to bookmark toolbar and mouseup. 3) Bookmark is not created on toolbar
Following workaround exists: * Choose "Add Page to Bookmark" under Bookmark menu. Select Toolbar Bookmarks from Create In pop-menu. Click Save. * Drag URL string directly to the Toolbar Bookmarks folder located in the Sidebar. If this can't be resolved, maybe should be added to Read me.
eh, isn't this a regression?
Assignee: saari → pinkerton
Blocks: 147975
yes, adding regression.
Keywords: regression
Severity: major → blocker
Status: NEW → ASSIGNED
Target Milestone: --- → Chimera0.3
Dragging a url string from URL field directly into sidebar (not in a folder) results in a crash. This regressed on the June 26th build as well. Attaching stack trace.
Attached file stack trace
i have a patch for this bug, with that patch, the proxy just bounces back instead of crashing. i'll keep working to get the drag accepted.
fixed the crasher too. landing.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified on 2002-06-28-05 NB.
Status: RESOLVED → VERIFIED
No longer blocks: 147975
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: