Reinstate dragging the proxy to the personal toolbar and the outliner as well as fixing a crasher dragging to the end of the bookmarks list (bug 154460)